--- a/package.json
+++ b/package.json
@@ -157,6 +157,7 @@
       "name": "John Gravois"
     }
   ],
+  "author": "Esri",
   "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/Esri/solution.js/issues"
