--- a/packages/creator/examples/createSolutionFromItem/package.json
+++ b/packages/creator/examples/createSolutionFromItem/package.json
@@ -2,6 +2,7 @@
   "name": "createSolutionFromItem",
   "version": "1.0.0",
   "description": "Example use of @esri/solution-creator to create a solution item from an AGO item.",
+  "author": "Esri",
   "license": "Apache-2.0",
   "files": [],
   "devDependencies": {
