--- a/packages/common/examples/copySolutions/package.json
+++ b/packages/common/examples/copySolutions/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@esri/arcgis-rest-auth": "^2.7.1",
+    "@esri/arcgis-rest-feature-layer": "^2.7.1",
     "@esri/arcgis-rest-portal": "^2.7.1",
     "@esri/arcgis-rest-request": "^2.7.1",
     "@esri/arcgis-rest-service-admin": "^2.7.1",
