--- a/.travis.yml
+++ b/.travis.yml
@@ -3,12 +3,15 @@ sudo: false
 notifications:
   email: false
 node_js:
-- '8'
-- '10'
+  - 10
+  - 9
+  - 8
+  - 7
+  - 6
 before_script:
 - npm install
 script:
-- npm run test:ci
+- npm run test:chrome:ci
 env:
 - MOZ_HEADLESS=1
 addons:
