Combined create solution examples and minor example UI improvements

--- a/packages/creator/examples/createSolution/lerna.json
+++ b/packages/creator/examples/createSolution/lerna.json
@@ -1,7 +1,7 @@
 {
   "lerna": "3.19.0",
   "packages": [
-    "../createSolutionFromItem",
+    "../createSolution",
     "../../../../packages/*"
   ],
   "version": "0.0.1"
