--- a/packages/creator/examples/createSolution/tsconfig.json
+++ b/packages/creator/examples/createSolution/tsconfig.json
@@ -5,7 +5,7 @@
     "module": "amd",                     /* Specify module code generation: 'commonjs', 'amd', 'system', 'umd', 'es2015', or 'ESNext'. */
     "lib": [
       "dom",
-      "es5"
+      "es2015"
     ],                             /* Specify library files to be included in the compilation:  */
     // "allowJs": true,                       /* Allow javascript files to be compiled. */
     // "checkJs": true,                       /* Report errors in .js files. */
@@ -39,9 +39,7 @@
     // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     // "paths": {},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-    "typeRoots": [
-      "./node_modules/@types"
-    ],                                        /* List of folders to include type definitions from. */
+    "typeRoots": [],                                        /* List of folders to include type definitions from. */
     "skipLibCheck": true,
     "types": []                               /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true   /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
@@ -56,11 +54,8 @@
     // "experimentalDecorators": true,        /* Enables experimental support for ES7 decorators. */
     // "emitDecoratorMetadata": true,         /* Enables experimental support for emitting type metadata for decorators. */
   },
-  "exclude": [
-    "node_modules"
-  ],
+  "exclude": [],
   "include": [
-    "./node_modules/@types",
     "lib",
     "src"
   ]
