Added runtime dependency

--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,14 +19,15 @@
     "xss": "^1.0.6"
   },
   "dependencies": {
+    "@esri/arcgis-html-sanitizer": "^2.2.0",
     "@esri/arcgis-rest-auth": "^2.10.0",
     "@esri/arcgis-rest-feature-layer": "^2.10.0",
     "@esri/arcgis-rest-portal": "^2.10.0",
     "@esri/arcgis-rest-request": "^2.10.0",
     "@esri/arcgis-rest-service-admin": "^2.10.0",
     "@types/lodash.isplainobject": "^4.0.6",
-    "lodash.isplainobject": "^4.0.6",
     "adlib": "^3.0.4",
+    "lodash.isplainobject": "^4.0.6",
     "tslib": "^1.10.0",
     "xss": "^1.0.6"
   },
