--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@esri/solution.js",
   "version": "0.8.9",
-  "description": "JavaScript wrappers running in Node.js and modern browsers for transferring ArcGIS Online items from one organization to another.",
+  "description": "A library running in Node.js and modern browsers for transferring ArcGIS Online items from one organization to another.",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.0.0",
     "@rollup/plugin-node-resolve": "^6.0.0",
