--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -17,6 +17,10 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@esri/arcgis-rest-auth": "^2.11.0",
+    "@esri/arcgis-rest-portal": "^2.11.0",
+    "@esri/arcgis-rest-request": "^2.11.0",
+    "@esri/arcgis-rest-types": "^2.11.0",
     "@esri/solution-common": "^0.9.2",
     "@esri/solution-feature-layer": "^0.9.2",
     "@esri/solution-file": "^0.9.2",
