--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -23,10 +23,12 @@
     "@esri/arcgis-rest-portal": "^2.11.0",
     "@esri/arcgis-rest-request": "^2.11.0",
     "@esri/arcgis-rest-types": "^2.11.0",
+    "adlib": "^3.0.4",
     "rollup": "^1.22.0",
     "typescript": "^3.8.3"
   },
   "dependencies": {
+    "@esri/hub-common": "^3.7.5",
     "@esri/solution-common": "^0.9.2",
     "@esri/solution-feature-layer": "^0.9.2",
     "@esri/solution-file": "^0.9.2",
