--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -31,6 +31,9 @@
     "tslib": "^1.10.0",
     "xss": "^1.0.6"
   },
+  "peerDependencies": {
+    
+  },
   "scripts": {
     "prepare": "npm run build",
     "build": "npm run build:node && npm run build:umd && npm run build:esm",
