--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.9.2",
   "description": "A library running in Node.js and modern browsers for transferring ArcGIS Online items from one organization to another.",
   "devDependencies": {
-    "@rollup/plugin-commonjs": "^11.0.0",
-    "@rollup/plugin-node-resolve": "^6.0.0",
+    "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-json": "^4.0.3",
+    "@rollup/plugin-node-resolve": "^7.1.3",
     "@semantic-release/commit-analyzer": "^6.3.1",
     "@types/fetch-mock": "^7.3.2",
     "@types/jasmine": "^3.5.10",
     "@types/node": "^10.17.0",
+    "@types/sinon": "^9.0.0",
     "acetate": "^2.0.8",
     "acetate-cli": "^1.0.1",
     "changelog-parser": "^2.7.0",
@@ -22,6 +24,7 @@
     "cross-spawn": "^5.1.0",
     "cz-lerna-changelog": "^2.0.2",
     "date-fns": "^1.29.0",
+    "es6-promise": "^4.2.8",
     "event-stream": "3.3.4",
     "fetch-mock": "^7.7.3",
     "gh-pages": "^1.1.0",
@@ -29,6 +32,8 @@
     "handlebars": "^4.5.1",
     "husky": "^0.14.3",
     "inspect-process": "^0.5.0",
+    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-form-data": "^2.0.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
     "karma": "^4.4.1",
@@ -60,6 +65,7 @@
     "rollup-plugin-uglify": "^3.0.0",
     "semantic-release": "^15.13.28",
     "shelljs": "^0.7.8",
+    "sinon": "^9.0.2",
     "slug": "^0.9.1",
     "sri-toolbox": "0.2.0",
     "ts-node": "^8.3.0",
@@ -69,15 +75,9 @@
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.15.0",
     "typescript": "^3.8.3",
-    "uuid": "^3.3.3",
-    "@types/sinon": "^9.0.0",
-    "sinon": "^9.0.2"
+    "uuid": "^8.0.0"
   },
-  "dependencies": {
-    "es6-promise": "^4.2.1",
-    "isomorphic-fetch": "^2.2.1",
-    "isomorphic-form-data": "^2.0.0"
-  },
+  "dependencies": {},
   "lint-staged": {
     "*.ts": [
       "prettier --write --parser typescript --tab-width 2 --use-tabs false",
