--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
   "scripts": {
     "start:deployer": "lerna run build && http-server ./demos/deploySolution",
     "build": "lerna run build",
+    "build:umd": "lerna run build:umd",
     "clean": "npm run clean:src && npm run clean:dist",
     "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map}",
     "clean:dist": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
