--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -35,12 +35,14 @@
     "@esri/solution-group": "^0.9.2",
     "@esri/solution-simple-types": "^0.9.2",
     "@esri/solution-storymap": "^0.9.2",
+    "@esri/solution-hub-types": "^0.9.2",
     "tslib": "^1.10.0"
   },
   "scripts": {
     "prepare": "npm run build",
     "build": "npm run build:node && npm run build:umd && npm run build:esm",
     "build:esm": "tsc -p ./tsconfig.json --module esnext --outDir ./dist/esm --declaration",
+    "build:umd:watch": "tsc -w -p ./tsconfig.json --module umd --outDir ./dist/umd --declaration",
     "build:umd": "rollup -c ../../umd-base-profile.js && rollup -c ../../umd-production-profile.js",
     "build:node": "tsc -p ./tsconfig.json --module commonjs --outDir ./dist/node",
     "dev:esm": "tsc -w --module esnext --outDir ./dist/esm --declaration",
