--- a/package.json
+++ b/package.json
@@ -4,80 +4,87 @@
   "description": "A library running in Node.js and modern browsers for transferring ArcGIS Online items from one organization to another.",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^11.1.0",
+    "@rollup/plugin-inject": "^4.0.2",
     "@rollup/plugin-json": "^4.0.3",
     "@rollup/plugin-node-resolve": "^7.1.3",
-    "@semantic-release/commit-analyzer": "^6.3.1",
+    "@semantic-release/commit-analyzer": "^8.0.1",
     "@types/fetch-mock": "^7.3.2",
     "@types/jasmine": "^3.5.10",
-    "@types/node": "^10.17.0",
+    "@types/node": "^14.0.1",
     "@types/sinon": "^9.0.0",
     "acetate": "^2.0.8",
     "acetate-cli": "^1.0.1",
     "changelog-parser": "^2.7.0",
     "cheerio": "^1.0.0-rc.3",
     "codecov": "^3.6.5",
-    "commitizen": "^3.1.1",
-    "concurrently": "^3.5.1",
+    "commitizen": "^4.1.2",
+    "concurrently": "^5.2.0",
     "core-js": "^3.6.1",
     "coveralls": "^2.11.16",
     "cpx": "^1.5.0",
-    "cross-spawn": "^5.1.0",
+    "cross-spawn": "^7.0.2",
     "cz-lerna-changelog": "^2.0.2",
-    "date-fns": "^1.29.0",
-    "es6-promise": "^4.2.8",
-    "event-stream": "3.3.4",
-    "fetch-mock": "^7.7.3",
-    "gh-pages": "^1.1.0",
+    "date-fns": "^2.14.0",
+    "event-stream": "^4.0.1",
+    "fetch-mock": "^9.9.0",
+    "gh-pages": "^2.2.0",
     "gh-release": "^3.4.0",
     "handlebars": "^4.5.1",
-    "husky": "^0.14.3",
+    "husky": "^4.2.5",
     "inspect-process": "^0.5.0",
-    "isomorphic-fetch": "^2.2.1",
-    "isomorphic-form-data": "^2.0.0",
     "jasmine": "^3.5.0",
     "jasmine-core": "^3.5.0",
-    "karma": "^4.4.1",
-    "karma-chrome-launcher": "^2.2.0",
+    "karma": "^5.0.8",
+    "karma-chrome-launcher": "^3.1.0",
     "karma-edge-launcher": "^0.4.2",
     "karma-firefox-launcher": "^1.1.0",
-    "karma-jasmine": "^2.0.1",
+    "karma-jasmine": "^3.1.1",
     "karma-jasmine-diff-reporter": "^2.0.0",
     "karma-safari-launcher": "^1.0.0",
     "karma-spec-reporter": "0.0.32",
-    "karma-typescript": "^4.1.1",
-    "karma-typescript-es6-transform": "^4.0.0",
+    "karma-typescript": "^5.0.2",
+    "karma-typescript-es6-transform": "^5.0.2",
     "lerna": "^3.20.2",
-    "lint-staged": "^4.3.0",
-    "marked": "^0.7.0",
+    "lint-staged": "^10.2.4",
+    "marked": "^1.1.0",
     "minimatch": "^3.0.4",
     "node-sass": "^4.13.0",
-    "onchange": "^6.0.0",
-    "prettier": "^1.19.1",
+    "onchange": "^7.0.2",
+    "prettier": "^2.0.5",
     "resolve": "^1.5.0",
-    "rimraf": "^2.6.2",
-    "rollup": "^1.26.0",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.10.3",
     "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-filesize": "^6.1.1",
+    "rollup-plugin-filesize": "^9.0.0",
     "rollup-plugin-json": "^4.0.0",
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0",
+    "rollup-plugin-node-polyfills": "^0.2.1",
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-terser": "^4.0.4",
-    "rollup-plugin-typescript2": "^0.25.3",
-    "rollup-plugin-uglify": "^3.0.0",
+    "rollup-plugin-typescript2": "^0.27.1",
+    "rollup-plugin-uglify": "^6.0.4",
     "semantic-release": "^15.13.28",
-    "shelljs": "^0.7.8",
+    "shelljs": "^0.8.4",
     "sinon": "^9.0.2",
-    "slug": "^0.9.1",
+    "slug": "^2.1.1",
     "sri-toolbox": "0.2.0",
     "ts-node": "^8.3.0",
-    "tslib": "^1.10.0",
-    "tslint": "^5.16.0",
+    "tslib": "^2.0.0",
+    "tslint": "^6.1.2",
     "tslint-config-prettier": "^1.6.0",
-    "tslint-config-standard": "^8.0.1",
-    "typedoc": "^0.15.0",
-    "typescript": "^3.8.3",
+    "tslint-config-standard": "^9.0.0",
+    "typedoc": "^0.17.7",
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "adlib": "^3.0.5",
+    "es6-promise": "^4.2.8",
+    "isomorphic-fetch": "^2.2.1",
+    "isomorphic-form-data": "^2.0.0",
+    "jszip": "^3.4.0",
     "uuid": "^8.0.0"
   },
-  "dependencies": {},
   "lint-staged": {
     "*.ts": [
       "prettier --write --parser typescript --tab-width 2 --use-tabs false",
