--- a/tsconfig.json
+++ b/tsconfig.json
@@ -42,8 +42,7 @@
     ],                                        /* List of folders to include type definitions from. */
     "skipLibCheck": true,
     "types": [
-      "node",
-      "jasmine"
+      "node"
     ],                           /* Type declaration files to be included in compilation. */
     "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
     //"esModuleInterop": true,
@@ -61,7 +60,8 @@
   },
   "exclude": [
     "node_modules",
-    "packages/**/examples"
+    "packages/**/examples",
+    "packages/**/test"
   ],
   "include": [
     "./node_modules/@types",
