--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -18,22 +18,21 @@
     "typescript": "^3.8.3"
   },
   "dependencies": {
-    "@esri/hub-common": "^3.9.2",
     "@esri/arcgis-html-sanitizer": "^2.2.0",
     "@esri/arcgis-rest-auth": "^2.11.0",
     "@esri/arcgis-rest-feature-layer": "^2.11.0",
     "@esri/arcgis-rest-portal": "^2.11.0",
     "@esri/arcgis-rest-request": "^2.11.0",
     "@esri/arcgis-rest-service-admin": "^2.11.0",
+    "@esri/hub-common": "^3.9.2",
     "@types/lodash.isplainobject": "^4.0.6",
     "adlib": "^3.0.4",
+    "jszip": "^3.4.0",
     "lodash.isplainobject": "^4.0.6",
     "tslib": "^1.10.0",
     "xss": "^1.0.6"
   },
-  "peerDependencies": {
-    
-  },
+  "peerDependencies": {},
   "scripts": {
     "prepare": "npm run build",
     "build": "npm run build:node && npm run build:umd && npm run build:esm",
