--- a/package.json
+++ b/package.json
@@ -106,7 +106,7 @@
     "test:firefox": "karma start --single-run --browsers=Firefox",
     "test:node": "jasmine --config=jasmine.json",
     "test:node:debug": "inspect jasmine --config=jasmine.json",
-    "test:ci": "npm run lint && npm run build && npm run test:node && npm run test:chrome:ci && npm run coveralls",
+    "test:ci": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run coveralls",
     "test:ci:win": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run coveralls:win",
     "test:all": "npm run test:node && npm run test:chrome",
     "test:coverage": "npm run test:chrome:ci && npm run coveralls",
