--- a/demos/deploySolution/package.json
+++ b/demos/deploySolution/package.json
@@ -21,14 +21,16 @@
   "@esri/arcgis-rest-request": "^2.11.0",
   "@esri/arcgis-rest-service-admin": "^2.13.1",
   "@esri/arcgis-rest-types": "^2.11.0",
-  "@esri/hub-common": "^3.9.2",
+  "@esri/hub-common": "^4.0.0",
+  "@esri/hub-initiatives": "^4.0.0",
+  "@esri/hub-sites": "^4.0.0",
   "@esri/solution-common": "^0.9.2",
   "@esri/solution-deployer": "^0.9.2",
   "@esri/solution-feature-layer": "^0.9.2",
   "@esri/solution-file": "^0.9.2",
   "@esri/solution-group": "^0.9.2",
-  "@esri/solution-simple-types": "^0.9.2",
   "@esri/solution-hub-types": "^0.9.2",
+  "@esri/solution-simple-types": "^0.9.2",
   "@esri/solution-storymap": "^0.9.2"
  }
 }
