--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -16,19 +16,24 @@
     "@esri/arcgis-rest-auth": "^2.11.0",
     "@esri/arcgis-rest-portal": "^2.11.0",
     "@esri/arcgis-rest-request": "^2.11.0",
-    "@esri/arcgis-rest-types": "^2.11.0"
+    "@esri/arcgis-rest-types": "^2.11.0",
+    "@esri/hub-common": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0",
+    "@esri/hub-initiatives": "^4.0.0"
   },
   "devDependencies": {
+    "adlib": "^3.0.4",
+    "rollup": "^1.22.0",
+    "typescript": "^3.9.2",
     "@esri/arcgis-rest-auth": "^2.11.0",
     "@esri/arcgis-rest-portal": "^2.11.0",
     "@esri/arcgis-rest-request": "^2.11.0",
     "@esri/arcgis-rest-types": "^2.11.0",
-    "adlib": "^3.0.4",
-    "rollup": "^1.22.0",
-    "typescript": "^3.9.2"
+    "@esri/hub-common": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0",
+    "@esri/hub-initiatives": "^4.0.0"
   },
   "dependencies": {
-    "@esri/hub-common": "^3.9.2",
     "@esri/solution-common": "^0.9.2",
     "@esri/solution-feature-layer": "^0.9.2",
     "@esri/solution-file": "^0.9.2",
