--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -14,7 +14,21 @@
   ],
   "devDependencies": {
     "rollup": "^1.22.0",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.2",
+    "@esri/arcgis-rest-portal": "^2.13.1",
+    "@esri/arcgis-rest-auth": "^2.13.1",
+    "@esri/arcgis-rest-request": "^2.13.1",
+    "@esri/hub-common": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0",
+    "@esri/hub-initiatives": "^4.0.0"
+  },
+  "peerDependencies": {
+    "@esri/arcgis-rest-portal": "^2.13.1",
+    "@esri/arcgis-rest-auth": "^2.13.1",
+    "@esri/arcgis-rest-request": "^2.13.1",
+    "@esri/hub-common": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0",
+    "@esri/hub-initiatives": "^4.0.0"
   },
   "dependencies": {
     "@esri/solution-common": "^0.9.2",
@@ -31,7 +45,9 @@
     "dev:umd": "rollup -w -c ../../umd-base-profile.js",
     "dev:node": "tsc -w --module commonjs --outDir ./dist/node",
     "test:chrome": "karma start --single-run --browsers=Chrome",
-    "test:node": "jasmine --config=../../jasmine.json"
+    "test:node": "jasmine --config=../../jasmine.json",
+    "y:link:hub": "yalc link @esri/hub-common && yalc link @esri/hub-sites",
+    "y:unlink:hub": "yalc remove @esri/hub-common && yalc remove @esri/hub-sites"
   },
   "publishConfig": {
     "access": "public"
