--- a/package.json
+++ b/package.json
@@ -91,7 +91,7 @@
     "clean": "npm run clean:src && npm run clean:dist",
     "clean:src": "rm -rf packages/*/{src,test}/*.{d.ts,js,js.map} && rm -rf packages/*/{src,test}/**/*.{d.ts,js,js.map}",
     "clean:dist": "rm -rf packages/*/dist/ && rm -rf packages/*/.rpt2_cache",
-    "deepclean": "rm -rf ./node_modules && rm -rf packages/*/node_modules && npm run clean && npm i",
+    "deepclean": "rm -rf ./node_modules && rm -rf packages/*/node_modules && npm run clean",
     "lint": "tslint --project tsconfig.json --exclude '**/*.d.ts demos/**/*'",
     "lint:fix": "tslint --project tsconfig.json --exclude '**/*.d.ts' --fix",
     "prettify": "prettier --write --parser typescript --tab-width 2 --use-tabs false \"packages/**/+(src|test)/**/*.ts\"",
