--- a/demos/deploySolution/package.json
+++ b/demos/deploySolution/package.json
@@ -2,7 +2,7 @@
  "name": "deploysolution",
  "version": "1.0.0",
  "private": true,
- "description": "Example App for solutions.js deployer",
+ "description": "Example App for solutions.js deployer: Deploys a solution using its AGO id.",
  "main": "main.js",
  "author": "",
  "license": "Apache-2.0",
@@ -24,13 +24,13 @@
   "@esri/hub-common": "^4.0.0",
   "@esri/hub-initiatives": "^4.0.0",
   "@esri/hub-sites": "^4.0.0",
-  "@esri/solution-common": "^0.9.2",
-  "@esri/solution-deployer": "^0.9.2",
-  "@esri/solution-feature-layer": "^0.9.2",
-  "@esri/solution-file": "^0.9.2",
-  "@esri/solution-group": "^0.9.2",
-  "@esri/solution-hub-types": "^0.9.2",
-  "@esri/solution-simple-types": "^0.9.2",
-  "@esri/solution-storymap": "^0.9.2"
+  "@esri/solution-common": "^0.10.0",
+  "@esri/solution-deployer": "^0.10.0",
+  "@esri/solution-feature-layer": "^0.10.0",
+  "@esri/solution-file": "^0.10.0",
+  "@esri/solution-group": "^0.10.0",
+  "@esri/solution-hub-types": "^0.10.0",
+  "@esri/solution-simple-types": "^0.10.0",
+  "@esri/solution-storymap": "^0.10.0"
  }
 }
