--- a/demos/sanitizer/package.json
+++ b/demos/sanitizer/package.json
@@ -1,6 +1,6 @@
 {
  "name": "sanitizer",
- "version": "1.0.0",
+ "version": "0.11.0",
  "private": true,
  "description": "Example App for solutions.js common: Sanitizes HTML snippets.",
  "main": "main.js",
@@ -15,6 +15,7 @@
   "typescript": "^3.9.2"
  },
  "dependencies": {
+  "@esri/arcgis-html-sanitizer": "^2.2.0",
   "@esri/arcgis-rest-auth": "^2.11.0",
   "@esri/arcgis-rest-feature-layer": "^2.13.1",
   "@esri/arcgis-rest-portal": "^2.11.0",
@@ -23,7 +24,6 @@
   "@esri/arcgis-rest-types": "^2.11.0",
   "@esri/hub-common": "^4.0.0",
   "@esri/hub-initiatives": "^4.0.0",
-  "@esri/hub-sites": "^4.0.0",
-  "@esri/arcgis-html-sanitizer": "^2.2.0"
+  "@esri/hub-sites": "^4.0.0"
  }
 }
