--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-deployer",
-  "version": "0.10.0",
+  "version": "0.11.0",
   "description": "Manages the deployment of a Solution for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/deployer.umd.min.js",
@@ -18,29 +18,29 @@
     "@esri/arcgis-rest-request": "^2.11.0",
     "@esri/arcgis-rest-types": "^2.11.0",
     "@esri/hub-common": "^4.0.0",
-    "@esri/hub-sites": "^4.0.0",
-    "@esri/hub-initiatives": "^4.0.0"
+    "@esri/hub-initiatives": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0"
   },
   "devDependencies": {
-    "adlib": "^3.0.4",
-    "rollup": "^1.22.0",
-    "typescript": "^3.9.2",
     "@esri/arcgis-rest-auth": "^2.11.0",
     "@esri/arcgis-rest-portal": "^2.11.0",
     "@esri/arcgis-rest-request": "^2.11.0",
     "@esri/arcgis-rest-types": "^2.11.0",
     "@esri/hub-common": "^4.0.0",
+    "@esri/hub-initiatives": "^4.0.0",
     "@esri/hub-sites": "^4.0.0",
-    "@esri/hub-initiatives": "^4.0.0"
+    "adlib": "^3.0.4",
+    "rollup": "^1.22.0",
+    "typescript": "^3.9.2"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.10.0",
-    "@esri/solution-feature-layer": "^0.10.0",
-    "@esri/solution-file": "^0.10.0",
-    "@esri/solution-group": "^0.10.0",
-    "@esri/solution-simple-types": "^0.10.0",
-    "@esri/solution-storymap": "^0.10.0",
-    "@esri/solution-hub-types": "^0.9.2",
+    "@esri/solution-common": "^0.11.0",
+    "@esri/solution-feature-layer": "^0.11.0",
+    "@esri/solution-file": "^0.11.0",
+    "@esri/solution-group": "^0.11.0",
+    "@esri/solution-hub-types": "^0.11.0",
+    "@esri/solution-simple-types": "^0.11.0",
+    "@esri/solution-storymap": "^0.11.0",
     "tslib": "^1.10.0"
   },
   "scripts": {
