--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-hub-types",
-  "version": "0.9.2",
+  "version": "0.11.0",
   "description": "Manages the creation and deployment of Hub Site and Hub Page item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/hub-types.umd.min.js",
@@ -13,22 +13,22 @@
     "dist/**"
   ],
   "devDependencies": {
-    "rollup": "^1.22.0",
-    "typescript": "^3.9.2",
-    "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-auth": "^2.13.1",
+    "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-request": "^2.13.1",
     "@esri/hub-common": "^4.0.0",
+    "@esri/hub-initiatives": "^4.0.0",
     "@esri/hub-sites": "^4.0.0",
-    "@esri/hub-initiatives": "^4.0.0"
+    "rollup": "^1.22.0",
+    "typescript": "^3.9.2"
   },
   "peerDependencies": {
-    "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-auth": "^2.13.1",
+    "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-request": "^2.13.1",
     "@esri/hub-common": "^4.0.0",
-    "@esri/hub-sites": "^4.0.0",
-    "@esri/hub-initiatives": "^4.0.0"
+    "@esri/hub-initiatives": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0"
   },
   "dependencies": {
     "@esri/solution-common": "^0.9.2",
