--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -18,8 +18,15 @@
     "@esri/arcgis-rest-request": "^2.11.0",
     "@esri/arcgis-rest-types": "^2.11.0",
     "@esri/hub-common": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0",
     "@esri/hub-initiatives": "^4.0.0",
-    "@esri/hub-sites": "^4.0.0"
+    "@esri/solution-common": "^0.11.0",
+    "@esri/solution-feature-layer": "^0.11.0",
+    "@esri/solution-file": "^0.11.0",
+    "@esri/solution-group": "^0.11.0",
+    "@esri/solution-simple-types": "^0.11.0",
+    "@esri/solution-storymap": "^0.11.0",
+    "@esri/solution-hub-types": "^0.11.0"
   },
   "devDependencies": {
     "@esri/arcgis-rest-auth": "^2.11.0",
@@ -29,18 +36,15 @@
     "@esri/hub-common": "^4.0.0",
     "@esri/hub-initiatives": "^4.0.0",
     "@esri/hub-sites": "^4.0.0",
-    "adlib": "^3.0.4",
-    "rollup": "^1.22.0",
-    "typescript": "^3.9.2"
+    "@esri/solution-common": "^0.11.0",
+    "@esri/solution-feature-layer": "^0.11.0",
+    "@esri/solution-file": "^0.11.0",
+    "@esri/solution-group": "^0.11.0",
+    "@esri/solution-simple-types": "^0.11.0",
+    "@esri/solution-storymap": "^0.11.0",
+    "@esri/solution-hub-types": "^0.11.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.12.0",
-    "@esri/solution-feature-layer": "^0.12.0",
-    "@esri/solution-file": "^0.12.0",
-    "@esri/solution-group": "^0.12.0",
-    "@esri/solution-hub-types": "^0.12.0",
-    "@esri/solution-simple-types": "^0.12.0",
-    "@esri/solution-storymap": "^0.12.0",
     "tslib": "^1.10.0"
   },
   "scripts": {
