--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -21,6 +21,7 @@
     "@esri/solution-simple-types": "^0.12.0",
     "tslib": "^1.10.0"
   },
+  "peerDependencies": {},
   "scripts": {
     "prepare": "npm run build",
     "build": "npm run build:node && npm run build:umd && npm run build:esm",
