--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-simple-types",
-  "version": "0.13.0",
+  "version": "0.14.0",
   "description": "Manages the creation and deployment of simple item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/simple-types.umd.min.js",
@@ -20,14 +20,14 @@
     "typescript": "^3.9.2"
   },
   "peerDependencies": {
-    "@esri/solution-common": "^0.12.0",
-    "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-auth": "^2.13.1",
+    "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-request": "^2.13.1",
-    "@esri/hub-common":"^4.2.0"
+    "@esri/hub-common": "^4.2.0",
+    "@esri/solution-common": "^0.12.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.13.0",
+    "@esri/solution-common": "^0.14.0",
     "tslib": "^1.10.0"
   },
   "scripts": {
