--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-hub-types",
-  "version": "0.14.0",
+  "version": "0.15.0",
   "description": "Manages the creation and deployment of Hub Site and Hub Page item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/hub-types.umd.min.js",
@@ -13,30 +13,30 @@
     "dist/**"
   ],
   "devDependencies": {
-    "@esri/arcgis-rest-auth": "^2.13.1",
-    "@esri/arcgis-rest-portal": "^2.13.1",
-    "@esri/arcgis-rest-request": "^2.13.1",
+    "@esri/arcgis-rest-auth": "^2.11.0",
+    "@esri/arcgis-rest-feature-layer": "^2.11.0",
+    "@esri/arcgis-rest-portal": "^2.11.0",
+    "@esri/arcgis-rest-request": "^2.11.0",
+    "@esri/arcgis-rest-service-admin": "^2.11.0",
     "@esri/hub-common": "^4.2.0",
     "@esri/hub-initiatives": "^4.2.0",
     "@esri/hub-sites": "^4.2.0",
-    "@esri/solution-common": "^0.14.0",
-    "@esri/solution-simple-types": "^0.14.0",
+    "@esri/solution-common": "^0.15.0",
     "rollup": "^1.22.0",
-    "typescript": "^3.9.2"
+    "typescript": "^3.9.3"
   },
   "peerDependencies": {
-    "@esri/arcgis-rest-auth": "^2.13.1",
-    "@esri/arcgis-rest-portal": "^2.13.1",
-    "@esri/arcgis-rest-request": "^2.13.1",
+    "@esri/arcgis-rest-auth": "^2.11.0",
+    "@esri/arcgis-rest-feature-layer": "^2.11.0",
+    "@esri/arcgis-rest-portal": "^2.11.0",
+    "@esri/arcgis-rest-request": "^2.11.0",
+    "@esri/arcgis-rest-service-admin": "^2.11.0",
     "@esri/hub-common": "^4.2.0",
     "@esri/hub-initiatives": "^4.2.0",
     "@esri/hub-sites": "^4.2.0",
-    "@esri/solution-common": "^0.14.0",
-    "@esri/solution-simple-types": "^0.14.0"
+    "@esri/solution-common": "^0.12.0"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.14.0",
-    "@esri/solution-simple-types": "^0.14.0",
     "tslib": "^1.10.0"
   },
   "scripts": {
