Update module maps to use solution-form processor.

--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -23,6 +23,7 @@
     "@esri/solution-common": "^0.14.0",
     "@esri/solution-feature-layer": "^0.14.0",
     "@esri/solution-file": "^0.14.0",
+    "@esri/solution-form": "^0.14.0",
     "@esri/solution-group": "^0.14.0",
     "@esri/solution-hub-types": "^0.14.0",
     "@esri/solution-simple-types": "^0.14.0",
@@ -39,6 +40,7 @@
     "@esri/solution-common": "^0.14.0",
     "@esri/solution-feature-layer": "^0.14.0",
     "@esri/solution-file": "^0.14.0",
+    "@esri/solution-form": "^0.14.0",
     "@esri/solution-group": "^0.14.0",
     "@esri/solution-hub-types": "^0.14.0",
     "@esri/solution-simple-types": "^0.14.0",
