--- a/demos/deploySolution/package.json
+++ b/demos/deploySolution/package.json
@@ -28,6 +28,7 @@
   "@esri/solution-deployer": "^0.14.0",
   "@esri/solution-feature-layer": "^0.14.0",
   "@esri/solution-file": "^0.14.0",
+  "@esri/solution-form": "^0.14.0",
   "@esri/solution-group": "^0.14.0",
   "@esri/solution-hub-types": "^0.14.0",
   "@esri/solution-simple-types": "^0.14.0",
