--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -41,7 +41,8 @@
     "adlib": "^3.0.4",
     "lodash.isplainobject": "^4.0.6",
     "tslib": "^1.10.0",
-    "xss": "^1.0.6"
+    "xss": "^1.0.6",
+    "jszip": "3.4.0"
   },
   "scripts": {
     "prepare": "npm run build",
