Added and adjusted rollup plugins for some built-in functions

--- a/package.json
+++ b/package.json
@@ -176,5 +176,9 @@
     "commitizen": {
       "path": "./node_modules/cz-lerna-changelog"
     }
+  },
+  "dependencies": {
+    "rollup-plugin-node-builtins": "^2.1.2",
+    "rollup-plugin-node-globals": "^1.4.0"
   }
 }
