--- a/demos/sanitizeGroupItems/package.json
+++ b/demos/sanitizeGroupItems/package.json
@@ -11,30 +11,21 @@
     "start": "http-server ."
   },
   "devDependencies": {
+    "http-server": "0.12.3",
+    "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "@esri/arcgis-html-sanitizer": "^2.2.0",
     "@esri/arcgis-rest-auth": "^2.13.1",
     "@esri/arcgis-rest-feature-layer": "^2.13.1",
     "@esri/arcgis-rest-portal": "^2.13.1",
     "@esri/arcgis-rest-request": "^2.13.1",
     "@esri/arcgis-rest-service-admin": "^2.13.1",
-    "@esri/hub-common": "^4.2.0",
-    "@esri/hub-initiatives": "^4.2.0",
-    "@esri/hub-sites": "^4.2.0",
+    "@esri/arcgis-rest-types": "^2.13.1",
+    "@esri/hub-common": "^4.0.0",
+    "@esri/hub-initiatives": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0",
     "@esri/solution-common": "^0.16.5",
-    "@esri/solution-creator": "^0.16.5",
-    "@esri/solution-deployer": "^0.16.5",
-    "@esri/solution-feature-layer": "^0.16.5",
-    "@esri/solution-file": "^0.16.5",
-    "@esri/solution-form": "^0.16.5",
-    "@esri/solution-group": "^0.16.5",
-    "@esri/solution-hub-types": "^0.16.5",
-    "@esri/solution-simple-types": "^0.16.5",
-    "@esri/solution-storymap": "^0.16.5",
-    "@esri/solution-web-experience": "^0.16.5",
-    "http-server": "0.12.3",
-    "rollup": "^1.22.0",
-    "typescript": "^3.9.3"
-  },
-  "dependencies": {
-    "tslib": "^1.10.0"
+    "tslib": "^1.13.0"
   }
 }
