--- a/demos/sanitizer/package.json
+++ b/demos/sanitizer/package.json
@@ -1,29 +1,31 @@
 {
- "name": "sanitizer",
- "version": "0.16.5",
- "private": true,
- "description": "Example App for solutions.js common: Sanitizes HTML snippets.",
- "main": "main.js",
- "author": "",
- "license": "Apache-2.0",
- "scripts": {
-  "build": "tsc -p ./tsconfig.json --outDir ./dist --declaration",
-  "start": "http-server ."
- },
- "devDependencies": {
-  "http-server": "0.12.3",
-  "typescript": "^3.9.2"
- },
- "dependencies": {
-  "@esri/arcgis-html-sanitizer": "^2.2.0",
-  "@esri/arcgis-rest-auth": "^2.13.1",
-  "@esri/arcgis-rest-feature-layer": "^2.13.1",
-  "@esri/arcgis-rest-portal": "^2.13.1",
-  "@esri/arcgis-rest-request": "^2.13.1",
-  "@esri/arcgis-rest-service-admin": "^2.13.1",
-  "@esri/arcgis-rest-types": "^2.13.1",
-  "@esri/hub-common": "^4.0.0",
-  "@esri/hub-initiatives": "^4.0.0",
-  "@esri/hub-sites": "^4.0.0"
- }
+  "name": "sanitizer",
+  "version": "0.16.5",
+  "private": true,
+  "description": "Example App for solutions.js common: Sanitizes HTML snippets.",
+  "main": "main.js",
+  "author": "",
+  "license": "Apache-2.0",
+  "scripts": {
+    "build": "tsc -p ./tsconfig.json --outDir ./dist --declaration",
+    "start": "http-server ."
+  },
+  "devDependencies": {
+    "http-server": "0.12.3",
+    "typescript": "^3.9.5"
+  },
+  "dependencies": {
+    "@esri/arcgis-html-sanitizer": "^2.2.0",
+    "@esri/arcgis-rest-auth": "^2.13.1",
+    "@esri/arcgis-rest-feature-layer": "^2.13.1",
+    "@esri/arcgis-rest-portal": "^2.13.1",
+    "@esri/arcgis-rest-request": "^2.13.1",
+    "@esri/arcgis-rest-service-admin": "^2.13.1",
+    "@esri/arcgis-rest-types": "^2.13.1",
+    "@esri/hub-common": "^4.0.0",
+    "@esri/hub-initiatives": "^4.0.0",
+    "@esri/hub-sites": "^4.0.0",
+    "@esri/solution-common": "^0.16.5",
+    "tslib": "^1.13.0"
+  }
 }
