--- a/package.json
+++ b/package.json
@@ -70,13 +70,15 @@
     "slug": "^0.9.1",
     "sri-toolbox": "0.2.0",
     "ts-node": "^8.3.0",
-    "tslib": "^1.10.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.6.0",
     "tslint-config-standard": "^8.0.1",
     "typedoc": "^0.15.0",
-    "typescript": "^3.9.3",
+    "typescript": "^3.9.5",
     "uuid": "^8.0.0"
+  },
+  "dependencies": {
+    "tslib": "^1.13.0"
   },
   "lint-staged": {
     "packages/**/*.ts": [
