--- a/demos/copyItemInfo/tsconfig.json
+++ b/demos/copyItemInfo/tsconfig.json
@@ -41,8 +41,10 @@
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
     "typeRoots": [],                                        /* List of folders to include type definitions from. */
     "skipLibCheck": true,
-    "types": []                               /* Type declaration files to be included in compilation. */
-    // "allowSyntheticDefaultImports": true   /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
+    "types": [],                               /* Type declaration files to be included in compilation. */
+    "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
+    "esModuleInterop": true,
+    "suppressImplicitAnyIndexErrors": true
 
     /* Source Map Options */
     // "sourceRoot": "./",                    /* Specify the location where debugger should locate TypeScript files instead of source locations. */
