Updated usage of peer dependencies

--- a/packages/creator/package.json
+++ b/packages/creator/package.json
@@ -21,15 +21,6 @@
     "@esri/hub-common": "^6.3.0",
     "@esri/hub-initiatives": "^6.3.0",
     "@esri/hub-sites": "^6.3.0",
-    "@esri/solution-common": "^0.17.3",
-    "@esri/solution-feature-layer": "^0.17.3",
-    "@esri/solution-file": "^0.17.3",
-    "@esri/solution-form": "^0.17.3",
-    "@esri/solution-group": "^0.17.3",
-    "@esri/solution-hub-types": "^0.17.3",
-    "@esri/solution-simple-types": "^0.17.3",
-    "@esri/solution-storymap": "^0.17.3",
-    "@esri/solution-web-experience": "^0.17.3",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
   },
@@ -41,7 +32,9 @@
     "@esri/arcgis-rest-service-admin": "^2.15.0",
     "@esri/hub-common": "^6.3.0",
     "@esri/hub-initiatives": "^6.3.0",
-    "@esri/hub-sites": "^6.3.0",
+    "@esri/hub-sites": "^6.3.0"
+  },
+  "dependencies": {
     "@esri/solution-common": "^0.17.3",
     "@esri/solution-feature-layer": "^0.17.3",
     "@esri/solution-file": "^0.17.3",
@@ -50,9 +43,7 @@
     "@esri/solution-hub-types": "^0.17.3",
     "@esri/solution-simple-types": "^0.17.3",
     "@esri/solution-storymap": "^0.17.3",
-    "@esri/solution-web-experience": "^0.17.3"
-  },
-  "dependencies": {
+    "@esri/solution-web-experience": "^0.17.3",
     "tslib": "^1.13.0"
   },
   "scripts": {
