--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -19,10 +19,6 @@
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/arcgis-rest-service-admin": "^2.15.0",
     "@esri/hub-common": "^6.3.0",
-    "@esri/solution-common": "^0.17.3",
-    "@esri/solution-feature-layer": "^0.17.3",
-    "@esri/solution-file": "^0.17.3",
-    "@esri/solution-group": "^0.17.3",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
   },
@@ -32,13 +28,13 @@
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/arcgis-rest-service-admin": "^2.15.0",
-    "@esri/hub-common": "^6.3.0",
+    "@esri/hub-common": "^6.3.0"
+  },
+  "dependencies": {
     "@esri/solution-common": "^0.17.3",
     "@esri/solution-feature-layer": "^0.17.3",
     "@esri/solution-file": "^0.17.3",
-    "@esri/solution-group": "^0.17.3"
-  },
-  "dependencies": {
+    "@esri/solution-group": "^0.17.3",
     "tslib": "^1.13.0"
   },
   "scripts": {
