--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -17,7 +17,6 @@
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/hub-common": "^6.3.0",
-    "@esri/solution-common": "^0.17.3",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
   },
@@ -25,10 +24,10 @@
     "@esri/arcgis-rest-auth": "^2.15.0",
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
-    "@esri/hub-common": "^6.3.0",
-    "@esri/solution-common": "^0.17.3"
+    "@esri/hub-common": "^6.3.0"
   },
   "dependencies": {
+    "@esri/solution-common": "^0.17.3",
     "tslib": "^1.13.0"
   },
   "scripts": {
