--- a/packages/form/package.json
+++ b/packages/form/package.json
@@ -21,12 +21,6 @@
     "@esri/hub-common": "^6.3.0",
     "@esri/hub-initiatives": "^6.3.0",
     "@esri/hub-sites": "^6.3.0",
-    "@esri/solution-common": "^0.17.3",
-    "@esri/solution-feature-layer": "^0.17.3",
-    "@esri/solution-file": "^0.17.3",
-    "@esri/solution-group": "^0.17.3",
-    "@esri/solution-simple-types": "^0.17.3",
-    "@esri/solution-storymap": "^0.17.3",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
   },
@@ -38,15 +32,15 @@
     "@esri/arcgis-rest-service-admin": "^2.15.0",
     "@esri/hub-common": "^6.3.0",
     "@esri/hub-initiatives": "^6.3.0",
-    "@esri/hub-sites": "^6.3.0",
+    "@esri/hub-sites": "^6.3.0"
+  },
+  "dependencies": {
     "@esri/solution-common": "^0.17.3",
     "@esri/solution-feature-layer": "^0.17.3",
     "@esri/solution-file": "^0.17.3",
     "@esri/solution-group": "^0.17.3",
     "@esri/solution-simple-types": "^0.17.3",
-    "@esri/solution-storymap": "^0.17.3"
-  },
-  "dependencies": {
+    "@esri/solution-storymap": "^0.17.3",
     "tslib": "^1.13.0"
   },
   "scripts": {
