--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -17,21 +17,19 @@
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/hub-common": "^6.3.0",
-    "@esri/solution-common": "^0.17.3",
-    "@esri/solution-simple-types": "^0.17.3",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
-  },
-  "dependencies": {
-    "tslib": "^1.13.0"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "^2.15.0",
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
-    "@esri/hub-common": "^6.3.0",
+    "@esri/hub-common": "^6.3.0"
+  },
+  "dependencies": {
     "@esri/solution-common": "^0.17.3",
-    "@esri/solution-simple-types": "^0.17.3"
+    "@esri/solution-simple-types": "^0.17.3",
+    "tslib": "^1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
