Added new hub.js packages

--- a/packages/hub-types/package.json
+++ b/packages/hub-types/package.json
@@ -21,6 +21,8 @@
     "@esri/hub-common": "^6.3.0",
     "@esri/hub-initiatives": "^6.3.0",
     "@esri/hub-sites": "^6.3.0",
+    "@esri/hub-teams": "^6.3.0",
+    "@esri/hub-types": "^6.3.0",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
   },
@@ -32,7 +34,9 @@
     "@esri/arcgis-rest-service-admin": "^2.15.0",
     "@esri/hub-common": "^6.3.0",
     "@esri/hub-initiatives": "^6.3.0",
-    "@esri/hub-sites": "^6.3.0"
+    "@esri/hub-sites": "^6.3.0",
+    "@esri/hub-teams": "^6.3.0",
+    "@esri/hub-types": "^6.3.0"
   },
   "dependencies": {
     "@esri/solution-common": "^0.17.3",
