--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -18,13 +18,9 @@
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/arcgis-rest-service-admin": "^2.15.0",
-    "@esri/hub-common": "^4.2.0",
-    "@esri/solution-common": "^0.17.3",
-    "@esri/solution-feature-layer": "^0.17.3",
-    "@esri/solution-file": "^0.17.3",
-    "@esri/solution-group": "^0.17.3",
+    "@esri/hub-common": "^6.4.0",
     "rollup": "^1.22.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.7"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "^2.15.0",
@@ -32,14 +28,14 @@
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/arcgis-rest-service-admin": "^2.15.0",
-    "@esri/hub-common": "^4.2.0",
+    "@esri/hub-common": "^6.4.0"
+  },
+  "dependencies": {
     "@esri/solution-common": "^0.17.3",
     "@esri/solution-feature-layer": "^0.17.3",
     "@esri/solution-file": "^0.17.3",
-    "@esri/solution-group": "^0.17.3"
-  },
-  "dependencies": {
-    "tslib": "^1.10.0"
+    "@esri/solution-group": "^0.17.3",
+    "tslib": "^1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
