--- a/packages/deployer/package.json
+++ b/packages/deployer/package.json
@@ -18,9 +18,23 @@
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/arcgis-rest-service-admin": "^2.15.0",
-    "@esri/hub-common": "^4.2.0",
-    "@esri/hub-initiatives": "^4.2.0",
-    "@esri/hub-sites": "^4.2.0",
+    "@esri/hub-common": "^6.4.0",
+    "@esri/hub-initiatives": "^6.4.0",
+    "@esri/hub-sites": "^6.4.0",
+    "rollup": "^1.22.0",
+    "typescript": "^3.9.7"
+  },
+  "peerDependencies": {
+    "@esri/arcgis-rest-auth": "^2.15.0",
+    "@esri/arcgis-rest-feature-layer": "^2.15.0",
+    "@esri/arcgis-rest-portal": "^2.15.0",
+    "@esri/arcgis-rest-request": "^2.15.0",
+    "@esri/arcgis-rest-service-admin": "^2.15.0",
+    "@esri/hub-common": "^6.4.0",
+    "@esri/hub-initiatives": "^6.4.0",
+    "@esri/hub-sites": "^6.4.0"
+  },
+  "dependencies": {
     "@esri/solution-common": "^0.17.3",
     "@esri/solution-feature-layer": "^0.17.3",
     "@esri/solution-file": "^0.17.3",
@@ -30,30 +44,7 @@
     "@esri/solution-simple-types": "^0.17.3",
     "@esri/solution-storymap": "^0.17.3",
     "@esri/solution-web-experience": "^0.17.3",
-    "rollup": "^1.22.0",
-    "typescript": "^3.9.3"
-  },
-  "peerDependencies": {
-    "@esri/arcgis-rest-auth": "^2.15.0",
-    "@esri/arcgis-rest-feature-layer": "^2.15.0",
-    "@esri/arcgis-rest-portal": "^2.15.0",
-    "@esri/arcgis-rest-request": "^2.15.0",
-    "@esri/arcgis-rest-service-admin": "^2.15.0",
-    "@esri/hub-common": "^4.2.0",
-    "@esri/hub-initiatives": "^4.2.0",
-    "@esri/hub-sites": "^4.2.0",
-    "@esri/solution-common": "^0.17.3",
-    "@esri/solution-feature-layer": "^0.17.3",
-    "@esri/solution-file": "^0.17.3",
-    "@esri/solution-form": "^0.17.3",
-    "@esri/solution-group": "^0.17.3",
-    "@esri/solution-hub-types": "^0.17.3",
-    "@esri/solution-simple-types": "^0.17.3",
-    "@esri/solution-storymap": "^0.17.3",
-    "@esri/solution-web-experience": "^0.17.3"
-  },
-  "dependencies": {
-    "tslib": "^1.10.0"
+    "tslib": "^1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
