--- a/packages/group/package.json
+++ b/packages/group/package.json
@@ -18,12 +18,11 @@
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/arcgis-rest-service-admin": "^2.15.0",
-    "@esri/hub-common": "^4.2.0",
-    "@esri/hub-initiatives": "^4.2.0",
-    "@esri/hub-sites": "^4.2.0",
-    "@esri/solution-common": "^0.17.3",
+    "@esri/hub-common": "^6.4.0",
+    "@esri/hub-initiatives": "^6.4.0",
+    "@esri/hub-sites": "^6.4.0",
     "rollup": "^1.22.0",
-    "typescript": "^3.9.3"
+    "typescript": "^3.9.7"
   },
   "peerDependencies": {
     "@esri/arcgis-rest-auth": "^2.15.0",
@@ -31,13 +30,13 @@
     "@esri/arcgis-rest-portal": "^2.15.0",
     "@esri/arcgis-rest-request": "^2.15.0",
     "@esri/arcgis-rest-service-admin": "^2.15.0",
-    "@esri/hub-common": "^4.2.0",
-    "@esri/hub-initiatives": "^4.2.0",
-    "@esri/hub-sites": "^4.2.0",
-    "@esri/solution-common": "^0.17.3"
+    "@esri/hub-common": "^6.4.0",
+    "@esri/hub-initiatives": "^6.4.0",
+    "@esri/hub-sites": "^6.4.0"
   },
   "dependencies": {
-    "tslib": "^1.10.0"
+    "@esri/solution-common": "^0.17.3",
+    "tslib": "^1.13.0"
   },
   "scripts": {
     "prepare": "npm run build",
