Revert "Test two Travis parameters from arcgis-rest-js"
This reverts commit 5e4049a58d7c2f5aef598a26024a4841a8088a73.

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,9 +3,9 @@ sudo: false
 notifications:
   email: false
 node_js:
-  - "node"
-  - "lts/*"
+  - 12
   - 10
+  - 8
 cache: npm
 script:
   - npm run test:ci
@@ -27,4 +27,5 @@ addons:
   firefox: latest
 branches:
   only:
-    - master
+    - gh-pages
+    - /.*/
