Switched to test:chrome:ci for Travis

--- a/package.json
+++ b/package.json
@@ -112,8 +112,8 @@
     "test:firefox": "karma start --single-run --browsers=Firefox",
     "test:node": "jasmine --config=jasmine.json",
     "test:node:debug": "inspect jasmine --config=jasmine.json",
-    "test:ci": "npm run test && npm run coveralls",
-    "test:ci:win": "npm run test && npm run coveralls:win",
+    "test:ci": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run test:firefox && npm run coveralls",
+    "test:ci:win": "npm run lint && npm run test:node && npm run test:chrome:ci && npm run test:firefox && npm run coveralls:win",
     "test:all": "npm run test:node && npm run test:chrome",
     "test:coverage": "npm run test:chrome:ci && npm run coveralls",
     "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
