Ran "audit fix" and "retire"

--- a/package.json
+++ b/package.json
@@ -73,11 +73,12 @@
     "sinon": "^9.0.2",
     "slug": "^0.9.1",
     "sri-toolbox": "0.2.0",
+    "tinymce": "^5.5.1",
     "ts-node": "^8.3.0",
     "tslint": "^5.16.0",
     "tslint-config-prettier": "^1.6.0",
-    "tslint-config-standard": "^8.0.1",
-    "typedoc": "^0.15.0",
+    "tslint-config-standard": "^9.0.0",
+    "typedoc": "^0.19.2",
     "typescript": "^4.0.3",
     "uuid": "^8.0.0"
   },
@@ -119,6 +120,7 @@
     "test:all": "npm run test:node && npm run test:chrome",
     "test:coverage": "npm run test:chrome:ci && npm run coveralls",
     "test:coverage:win": "npm run test:chrome:ci && npm run coveralls:win",
+    "test:retire": "retire",
     "coveralls": "cat coverage/lcov/lcov.info | node node_modules/coveralls/bin/coveralls",
     "coveralls:win": "start cmd.exe /c \"type coverage\\lcov\\lcov.info | node node_modules/coveralls/bin/coveralls.js\"",
     "docs:build": "rimraf docs/build && npm run docs:typedoc && npm run docs:build:acetate && npm run docs:build:sass && npm run docs:build:images && npm run docs:build:js",
