Pin down package versions

--- a/demos/package.json
+++ b/demos/package.json
@@ -10,27 +10,27 @@
     "rollup": "^2.31.0"
   },
   "dependencies": {
-    "@esri/arcgis-rest-auth": "^2.19.2",
-    "@esri/arcgis-rest-feature-layer": "^2.19.2",
-    "@esri/arcgis-rest-portal": "^2.19.2",
-    "@esri/arcgis-rest-request": "^2.19.2",
-    "@esri/arcgis-rest-service-admin": "^2.19.2",
-    "@esri/hub-common": "^6.18.0",
-    "@esri/hub-initiatives": "^6.18.0",
-    "@esri/hub-sites": "^6.18.0",
-    "@esri/hub-teams": "^6.18.0",
-    "@esri/solution-common": "^0.21.1",
-    "@esri/solution-creator": "^0.21.1",
-    "@esri/solution-deployer": "^0.21.1",
-    "@esri/solution-feature-layer": "^0.21.1",
-    "@esri/solution-file": "^0.21.1",
-    "@esri/solution-form": "^0.21.1",
-    "@esri/solution-group": "^0.21.1",
-    "@esri/solution-hub-types": "^0.21.1",
-    "@esri/solution-simple-types": "^0.21.1",
-    "@esri/solution-storymap": "^0.21.1",
-    "@esri/solution-web-experience": "^0.21.1",
-    "adlib": "^3.0.6"
+    "@esri/arcgis-rest-auth": "2.21.0",
+    "@esri/arcgis-rest-feature-layer": "2.21.0",
+    "@esri/arcgis-rest-portal": "2.21.0",
+    "@esri/arcgis-rest-request": "2.21.0",
+    "@esri/arcgis-rest-service-admin": "2.21.0",
+    "@esri/arcgis-rest-types": "2.21.0",
+    "@esri/hub-common": "6.19.0",
+    "@esri/hub-initiatives": "6.19.0",
+    "@esri/hub-sites": "6.19.0",
+    "@esri/hub-teams": "6.19.0",
+    "@esri/solution-common": "0.21.1",
+    "@esri/solution-creator": "0.21.1",
+    "@esri/solution-deployer": "0.21.1",
+    "@esri/solution-feature-layer": "0.21.1",
+    "@esri/solution-file": "0.21.1",
+    "@esri/solution-form": "0.21.1",
+    "@esri/solution-group": "0.21.1",
+    "@esri/solution-hub-types": "0.21.1",
+    "@esri/solution-simple-types": "0.21.1",
+    "@esri/solution-storymap": "0.21.1",
+    "@esri/solution-web-experience": "0.21.1"
   },
   "scripts": {
     "build": "tsc -p ./tsconfig.json --outDir ./dist"
