--- a/demos/package.json
+++ b/demos/package.json
@@ -16,10 +16,10 @@
     "@esri/arcgis-rest-request": "2.21.0",
     "@esri/arcgis-rest-service-admin": "2.21.0",
     "@esri/arcgis-rest-types": "2.21.0",
-    "@esri/hub-common": "6.19.0",
-    "@esri/hub-initiatives": "6.19.0",
-    "@esri/hub-sites": "6.19.0",
-    "@esri/hub-teams": "6.19.0",
+    "@esri/hub-common": "6.20.1",
+    "@esri/hub-initiatives": "6.20.1",
+    "@esri/hub-sites": "6.20.1",
+    "@esri/hub-teams": "6.20.1",
     "@esri/solution-common": "0.21.1",
     "@esri/solution-creator": "0.21.1",
     "@esri/solution-deployer": "0.21.1",
@@ -30,7 +30,8 @@
     "@esri/solution-hub-types": "0.21.1",
     "@esri/solution-simple-types": "0.21.1",
     "@esri/solution-storymap": "0.21.1",
-    "@esri/solution-web-experience": "0.21.1"
+    "@esri/solution-web-experience": "0.21.1",
+    "adlib": "3.0.7"
   },
   "scripts": {
     "build": "tsc -p ./tsconfig.json --outDir ./dist"
