--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -19,7 +19,8 @@
     "@esri/arcgis-rest-request": "2.21.0",
     "@esri/arcgis-rest-service-admin": "2.21.0",
     "@esri/arcgis-rest-types": "2.21.0",
-    "@esri/hub-common": "6.19.0",
+    "@esri/hub-common": "6.20.1",
+    "@types/adlib": "^3.0.1",
     "rollup": "^1.22.0",
     "typescript": "^4.0.3"
   },
@@ -29,11 +30,12 @@
     "@esri/arcgis-rest-portal": "2.21.0",
     "@esri/arcgis-rest-request": "2.21.0",
     "@esri/arcgis-rest-service-admin": "2.21.0",
-    "@esri/hub-common": "6.19.0"
+    "@esri/hub-common": "6.20.1"
   },
   "dependencies": {
     "@esri/arcgis-html-sanitizer": "~2.1.0",
     "@types/lodash.isplainobject": "^4.0.6",
+    "adlib": "3.0.7",
     "jszip": "3.4.0",
     "lodash.isplainobject": "^4.0.6",
     "tslib": "^1.13.0",
