--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -16,7 +16,7 @@
     "@esri/arcgis-rest-auth": "^2.21.0",
     "@esri/arcgis-rest-portal": "^2.21.0",
     "@esri/arcgis-rest-request": "^2.21.0",
-    "@esri/hub-common": "^6.18.0",
+    "@esri/hub-common": "6.20.1",
     "rollup": "^1.22.0",
     "typescript": "^4.0.3"
   },
@@ -24,7 +24,7 @@
     "@esri/arcgis-rest-auth": "^2.21.0",
     "@esri/arcgis-rest-portal": "^2.21.0",
     "@esri/arcgis-rest-request": "^2.21.0",
-    "@esri/hub-common": "^6.18.0"
+    "@esri/hub-common": "6.20.1"
   },
   "dependencies": {
     "@esri/solution-common": "^0.21.1",
