--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -18,8 +18,8 @@
     "@esri/arcgis-rest-portal": "^2.21.0",
     "@esri/arcgis-rest-request": "^2.21.0",
     "@esri/arcgis-rest-service-admin": "^2.21.0",
-    "@esri/hub-common": "^6.18.0",
-    "@esri/hub-initiatives": "^6.18.0",
+    "@esri/hub-common": "6.20.1",
+    "@esri/hub-initiatives": "6.20.1",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
   },
@@ -29,8 +29,8 @@
     "@esri/arcgis-rest-portal": "^2.21.0",
     "@esri/arcgis-rest-request": "^2.21.0",
     "@esri/arcgis-rest-service-admin": "^2.21.0",
-    "@esri/hub-common": "^6.18.0",
-    "@esri/hub-initiatives": "^6.18.0"
+    "@esri/hub-common": "6.20.1",
+    "@esri/hub-initiatives": "6.20.1"
   },
   "dependencies": {
     "@esri/solution-common": "^0.21.1",
