--- a/packages/web-experience/package.json
+++ b/packages/web-experience/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-web-experience",
-  "version": "0.21.2",
+  "version": "0.21.3",
   "description": "Manages the creation and deployment of Web Experience item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/web-experience.umd.min.js",
@@ -18,8 +18,8 @@
     "@esri/arcgis-rest-portal": "^2.22.0",
     "@esri/arcgis-rest-request": "^2.22.0",
     "@esri/arcgis-rest-service-admin": "^2.22.0",
-    "@esri/hub-common": "^6.19.0",
-    "@esri/hub-initiatives": "^6.19.0",
+    "@esri/hub-common": "6.20.1",
+    "@esri/hub-initiatives": "6.20.1",
     "rollup": "^1.22.0",
     "typescript": "^3.9.7"
   },
@@ -29,12 +29,12 @@
     "@esri/arcgis-rest-portal": "^2.22.0",
     "@esri/arcgis-rest-request": "^2.22.0",
     "@esri/arcgis-rest-service-admin": "^2.22.0",
-    "@esri/hub-common": "^6.19.0",
-    "@esri/hub-initiatives": "^6.19.0"
+    "@esri/hub-common": "6.20.1",
+    "@esri/hub-initiatives": "6.20.1"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.21.2",
-    "@esri/solution-simple-types": "^0.21.2",
+    "@esri/solution-common": "^0.21.3",
+    "@esri/solution-simple-types": "^0.21.3",
     "tslib": "^1.13.0"
   },
   "scripts": {
