--- a/packages/simple-types/package.json
+++ b/packages/simple-types/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-simple-types",
-  "version": "0.21.2",
+  "version": "0.21.3",
   "description": "Manages the creation and deployment of simple item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/simple-types.umd.min.js",
@@ -18,8 +18,8 @@
     "@esri/arcgis-rest-portal": "^2.22.0",
     "@esri/arcgis-rest-request": "^2.22.0",
     "@esri/arcgis-rest-service-admin": "^2.22.0",
-    "@esri/hub-common": "^6.19.0",
-    "@esri/hub-teams": "^6.19.0",
+    "@esri/hub-common": "6.20.1",
+    "@esri/hub-teams": "6.20.1",
     "rollup": "^1.22.0",
     "typescript": "^4.0.3"
   },
@@ -29,14 +29,14 @@
     "@esri/arcgis-rest-portal": "^2.22.0",
     "@esri/arcgis-rest-request": "^2.22.0",
     "@esri/arcgis-rest-service-admin": "^2.22.0",
-    "@esri/hub-common": "^6.19.0",
-    "@esri/hub-teams": "^6.19.0"
+    "@esri/hub-common": "6.20.1",
+    "@esri/hub-teams": "6.20.1"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.21.2",
-    "@esri/solution-feature-layer": "^0.21.2",
-    "@esri/solution-file": "^0.21.2",
-    "@esri/solution-group": "^0.21.2",
+    "@esri/solution-common": "^0.21.3",
+    "@esri/solution-feature-layer": "^0.21.3",
+    "@esri/solution-file": "^0.21.3",
+    "@esri/solution-group": "^0.21.3",
     "tslib": "^1.13.0"
   },
   "scripts": {
