--- a/packages/storymap/package.json
+++ b/packages/storymap/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@esri/solution-storymap",
-  "version": "0.21.2",
+  "version": "0.21.3",
   "description": "Manages the creation and deployment of Story Map item types for @esri/solution.js.",
   "main": "dist/node/index.js",
   "unpkg": "dist/umd/storymap.umd.min.js",
@@ -16,7 +16,7 @@
     "@esri/arcgis-rest-auth": "^2.22.0",
     "@esri/arcgis-rest-portal": "^2.22.0",
     "@esri/arcgis-rest-request": "^2.22.0",
-    "@esri/hub-common": "^6.19.0",
+    "@esri/hub-common": "6.20.1",
     "rollup": "^1.22.0",
     "typescript": "^4.0.3"
   },
@@ -24,10 +24,10 @@
     "@esri/arcgis-rest-auth": "^2.22.0",
     "@esri/arcgis-rest-portal": "^2.22.0",
     "@esri/arcgis-rest-request": "^2.22.0",
-    "@esri/hub-common": "^6.19.0"
+    "@esri/hub-common": "6.20.1"
   },
   "dependencies": {
-    "@esri/solution-common": "^0.21.2",
+    "@esri/solution-common": "^0.21.3",
     "tslib": "^1.13.0"
   },
   "scripts": {
